Correcion de errores
Se corrigieron errores en el servcio de lamacenamiento de imagenes